--- a/translations/messages.es_MX.po
+++ b/translations/messages.es_MX.po
@@ -620,10 +620,10 @@ msgstr ""
 msgid "Course categories available"
 msgstr ""
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr ""
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr ""
 
 msgid "Agenda list"
@@ -1721,7 +1721,7 @@ msgstr "Por defecto, el curso sólo es accesible para usted como  único usuario
 msgid "Public - access allowed for the whole world"
 msgstr "Abierto - accceso permitido para todos"
 
-msgid " Open - access allowed for users registered on the platform"
+msgid "Open - access allowed for users registered on the platform"
 msgstr "Abierto - acceso permitido para usuarios registrados"
 
 msgid "Student %s is no subscribed to this course"
