--- a/translations/messages.lv.po
+++ b/translations/messages.lv.po
@@ -621,10 +621,10 @@ msgstr ""
 msgid "Course categories available"
 msgstr ""
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr ""
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr ""
 
 msgid "Agenda list"
@@ -1722,7 +1722,7 @@ msgstr "Pēc noklusējuma, Jūsu apmācības kurss ir publisks, bet Jūs varat n
 msgid "Public - access allowed for the whole world"
 msgstr "Atklātā pieeja - iespējama no jebkuras vietas pasaulē!"
 
-msgid " Open - access allowed for users registered on the platform"
+msgid "Open - access allowed for users registered on the platform"
 msgstr "Daļēji atklātā pieeja - iespējama lietotājiem, kas reģistrējušies portālā"
 
 msgid "Student %s is no subscribed to this course"
