--- a/translations/messages.sr.po
+++ b/translations/messages.sr.po
@@ -621,10 +621,10 @@ msgstr ""
 msgid "Course categories available"
 msgstr ""
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr ""
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr ""
 
 msgid "Agenda list"
@@ -1722,7 +1722,7 @@ msgstr "Svaki kurs po kreiranju je javni, ali Vi možete definisati nifo poverlj
 msgid "Public - access allowed for the whole world"
 msgstr "Otovren – pristup omogućen celom svetu"
 
-msgid " Open - access allowed for users registered on the platform"
+msgid "Open - access allowed for users registered on the platform"
 msgstr "Otvoren pristup – pristup omogućen korisnicima koji su registrovani."
 
 msgid "Student %s is no subscribed to this course"
