--- a/translations/messages.bg.po
+++ b/translations/messages.bg.po
@@ -620,10 +620,10 @@ msgstr ""
 msgid "Course categories available"
 msgstr ""
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr ""
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr ""
 
 msgid "Agenda list"
@@ -1721,7 +1721,7 @@ msgstr "По подразбиране вашият курс е досъпен з
 msgid "Public - access allowed for the whole world"
 msgstr "Отворен - курсът е достъпен за \"целия свят\""
 
-msgid " Open - access allowed for users registered on the platform"
+msgid "Open - access allowed for users registered on the platform"
 msgstr "Отворен - курсът е достъпен за всички регистрирани в системата потребители"
 
 msgid "Student %s is no subscribed to this course"
