--- a/translations/messages.ca_ES.po
+++ b/translations/messages.ca_ES.po
@@ -628,10 +628,10 @@ msgstr "Categories de cursos en el lloc %s:"
 msgid "Course categories available"
 msgstr "Categories de cursos disponibles"
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr "El grup ara pertany al grup seleccionat"
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr "Heu de seleccionar com a mínim un grup i un lloc"
 
 msgid "Agenda list"
@@ -1729,7 +1729,7 @@ msgstr "El vostre curs és públic per defecte, però podeu definir a continuaci
 msgid "Public - access allowed for the whole world"
 msgstr "Obert - Accés autoritzat per tothom"
 
-msgid " Open - access allowed for users registered on the platform"
+msgid "Open - access allowed for users registered on the platform"
 msgstr "Obert - Accés autoritzat als usuaris enregistrats de la plataforma"
 
 msgid "Student %s is no subscribed to this course"
