--- a/translations/messages.da.po
+++ b/translations/messages.da.po
@@ -620,10 +620,10 @@ msgstr ""
 msgid "Course categories available"
 msgstr ""
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr ""
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr ""
 
 msgid "Agenda list"
@@ -1721,7 +1721,7 @@ msgstr "Som standard er dit kursus tilgængeligt for registrerede brugere på pl
 msgid "Public - access allowed for the whole world"
 msgstr "Åben - siden kan ses af alle på internettet"
 
-msgid " Open - access allowed for users registered on the platform"
+msgid "Open - access allowed for users registered on the platform"
 msgstr "Åben - siden kan efter login ses af de, der følger et direkte link eller de, der står på sidens deltagerliste"
 
 msgid "Student %s is no subscribed to this course"
