--- a/translations/messages.eu_ES.po
+++ b/translations/messages.eu_ES.po
@@ -620,10 +620,10 @@ msgstr ""
 msgid "Course categories available"
 msgstr ""
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr ""
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr ""
 
 msgid "Agenda list"
@@ -1721,7 +1721,7 @@ msgstr "Besterik ezean, ikastaroa publikoa da. Baina zuk sarbide maila zehaztu d
 msgid "Public - access allowed for the whole world"
 msgstr "Publikoa - sarbidea edonorentzat dago baimenduta"
 
-msgid " Open - access allowed for users registered on the platform"
+msgid "Open - access allowed for users registered on the platform"
 msgstr "Irekia - plataforman izena eman duten erabiltzaileentzat bakarrik baimenduta dago sarbidea"
 
 msgid "Student %s is no subscribed to this course"
