--- a/translations/messages.lt.po
+++ b/translations/messages.lt.po
@@ -622,10 +622,10 @@ msgstr ""
 msgid "Course categories available"
 msgstr ""
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr ""
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr ""
 
 msgid "Agenda list"
@@ -1723,8 +1723,8 @@ msgstr " Pagal nutylėjimą jūsų kursas yra viešas, bet galite nurodyti saugu
 msgid "Public - access allowed for the whole world"
 msgstr "Viešas priėjimas visiems lankytojams"
 
-msgid " Open - access allowed for users registered on the platform"
-msgstr " Atviras priėjimas vartotojams, priregistruotiems sistemoje"
+msgid "Open - access allowed for users registered on the platform"
+msgstr "Atviras priėjimas vartotojams, priregistruotiems sistemoje"
 
 msgid "Student %s is no subscribed to this course"
 msgstr ""
