--- a/translations/messages.qu_PE.po
+++ b/translations/messages.qu_PE.po
@@ -620,10 +620,10 @@ msgstr ""
 msgid "Course categories available"
 msgstr ""
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr ""
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr ""
 
 msgid "Agenda list"
@@ -1721,7 +1721,7 @@ msgstr "Por defecto el curso es público. Pero Ud. puede definir el nivel de con
 msgid "Public - access allowed for the whole world"
 msgstr "Público - acceso autorizado a cualquier persona"
 
-msgid " Open - access allowed for users registered on the platform"
+msgid "Open - access allowed for users registered on the platform"
 msgstr "Público - acceso autorizado sólo para los usuarios registrados en la plataforma"
 
 msgid "Student %s is no subscribed to this course"
