--- a/translations/messages.sv.po
+++ b/translations/messages.sv.po
@@ -620,10 +620,10 @@ msgstr ""
 msgid "Course categories available"
 msgstr ""
 
-msgid "The group now belongs to the selected site"
+msgid "The group now belongs to the selected URL."
 msgstr ""
 
-msgid "You need to select at least one group and one site"
+msgid "You need to select at least one group and one URL."
 msgstr ""
 
 msgid "Agenda list"
@@ -1721,7 +1721,7 @@ msgstr "Som standard är din kurs publik. Du kan definiera nivån av tillgängli
 msgid "Public - access allowed for the whole world"
 msgstr "Öppen - access tillåten för hela världen"
 
-msgid " Open - access allowed for users registered on the platform"
+msgid "Open - access allowed for users registered on the platform"
 msgstr "Öppen - access tillåten för registrerade användare"
 
 msgid "Student %s is no subscribed to this course"
